--- a/W9_MvcProject/Views/Book/List.cshtml
+++ b/W9_MvcProject/Views/Book/List.cshtml
@@ -6,6 +6,23 @@
 
 <h2 class="display-6 fw-medium text-center mb-4">Book List</h2>
 
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success w-75 align-middle mx-auto" role="alert">
+        @TempData["Message"]
+    </div>
+}
+@if (TempData["DeleteMessage"] != null)
+{
+    <div class="alert alert-danger w-75 align-middle mx-auto" role="alert">
+        @TempData["DeleteMessage"]
+    </div>
+}
+
+<div style="display: flex; justify-content: center; align-items: center;">
+    <a class="btn btn-primary mb-3" asp-controller="Book" asp-action="Add">Add new book</a>
+</div>
+
 <table class="table table-striped table-bordered table-hover text-center align-middle w-75 mx-auto">
     <thead>
     <tr>
